--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
-@import '../commun/src/styles.scss';
+@import 'src/app/commun/src/styles.scss';
 @import "node_modules/bootstrap/dist/css/bootstrap.css";
