--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,17 @@
-/* You can add global styles to this file, and also import other style files */
-@import 'src/app/common/styles.scss';
 @import "node_modules/bootstrap/dist/css/bootstrap.css";
+@import "./assets/styles/scss/backgrounds.scss";
+@import "./assets/styles/scss/materialize.scss";
+@import "./assets/styles/scss/text.scss";
+@import "./assets/styles/scss/variables.scss";
+@import "./assets/styles/scss/effects.scss";
+@import "./assets/styles/scss/themes-material.scss";
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
